fixed white space on mobile device

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -99,3 +99,10 @@
 .fixed-position {
     overflow: hidden;
  }
+
+
+ @media (max-width: 768px) {
+    .hideOverflowOnMobile {
+        overflow-x: hidden;
+    }
+}
